// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`translations not match uploads sources, alongside a directly-uploaded file the config never covers 1`] = `
"●  Fetching project files
●  Fetching project info
●  Project files fetched
●  Project info fetched
◆  Directory 'sources'
◆  File 'sources/1_android.xml'
◆  File 'sources/2_android.xml'
◆  File 'sources/3_android.xml'"
`;

exports[`translations not match attempts to upload translations for all languages (none exist locally) 1`] = `
"●  Fetching project files
●  Fetching project info
●  Project files fetched
●  Project info fetched"
`;

exports[`translations not match attempts to upload translations for a single specified language (uk) 1`] = `
"●  Fetching project files
●  Fetching project info
●  Project files fetched
●  Project info fetched"
`;

exports[`translations not match previews downloading translations once the config narrows to a single source file (dry run) 1`] = `
"●  Fetching project files
●  Fetching project info
●  Project files fetched
●  Project info fetched
◆  translations/it/1_android.xml
◆  translations/uk/1_android.xml"
`;

exports[`translations not match previews the same narrowed dry run as a tree 1`] = `
"●  Fetching project files
●  Fetching project info
●  Project files fetched
●  Project info fetched
.
╰─ translations
   ├─ it
   │  ╰─ 1_android.xml
   ╰─ uk
      ╰─ 1_android.xml"
`;

exports[`translations not match downloads translations for real, warning about the sources the narrowed config no longer covers 1`] = `
"●  Building translations
●  Building translations...
●  Downloading translations
●  Fetching project files
●  Fetching project info
●  Project files fetched
●  Project info fetched
●  Translations built
◆  Done
◆  File 'translations/it/1_android.xml' extracted
◆  File 'translations/uk/1_android.xml' extracted
	- java.properties (2)
	- sources/2_android.xml (2)
	- sources/3_android.xml (2)
Visit the https://crowdin.github.io/crowdin-cli/faq for more details"
`;

exports[`translations not match downloads translations again with --verbose, listing the omitted translation paths 1`] = `
"●  Building translations
●  Building translations...
●  Downloading translations
●  Fetching project files
●  Fetching project info
●  Loading configuration from '<workspace>/translations-not-match/crowdin.yml' file
●  Project files fetched
●  Project info fetched
●  Translations built
◆  Done
◆  File 'translations/it/1_android.xml' extracted
◆  File 'translations/uk/1_android.xml' extracted
	- java.properties (2)
		- it/java.properties
		- uk/java.properties
	- sources/2_android.xml (2)
		- translations/it/2_android.xml
		- translations/uk/2_android.xml
	- sources/3_android.xml (2)
		- translations/it/3_android.xml
		- translations/uk/3_android.xml
Visit the https://crowdin.github.io/crowdin-cli/faq for more details"
`;

exports[`translations not match downloads translations for a single specified language (uk) 1`] = `
"●  Building translations for languages: uk
●  Building translations...
●  Downloading translations
●  Fetching project files
●  Fetching project info
●  Project files fetched
●  Project info fetched
●  Translations built
◆  Done
◆  File 'translations/uk/1_android.xml' extracted
	- java.properties (1)
	- sources/2_android.xml (1)
	- sources/3_android.xml (1)
Visit the https://crowdin.github.io/crowdin-cli/faq for more details"
`;

exports[`translations not match downloads translations for a single specified language (uk) with --verbose 1`] = `
"●  Building translations for languages: uk
●  Building translations...
●  Downloading translations
●  Fetching project files
●  Fetching project info
●  Loading configuration from '<workspace>/translations-not-match/crowdin.yml' file
●  Project files fetched
●  Project info fetched
●  Translations built
◆  Done
◆  File 'translations/uk/1_android.xml' extracted
	- java.properties (1)
		- java.properties
	- sources/2_android.xml (1)
		- translations/uk/2_android.xml
	- sources/3_android.xml (1)
		- translations/uk/3_android.xml
Visit the https://crowdin.github.io/crowdin-cli/faq for more details"
`;

exports[`translations not match uploads sources to a brand-new branch 1`] = `
"●  Fetching project files
●  Fetching project info
●  Project files fetched
●  Project info fetched
◆  Branch 'test-branch'
◆  Directory 'sources'
◆  File 'sources/1_android.xml'
◆  File 'sources/2_android.xml'
◆  File 'sources/3_android.xml'"
`;

exports[`translations not match downloads translations for the branch, with the same configuration mismatch 1`] = `
"●  Building translations
●  Building translations...
●  Downloading translations
●  Fetching project files
●  Fetching project info
●  Project files fetched
●  Project info fetched
●  Translations built
◆  Done
◆  File 'translations/it/1_android.xml' extracted
◆  File 'translations/uk/1_android.xml' extracted
	- sources/2_android.xml (2)
	- sources/3_android.xml (2)
Visit the https://crowdin.github.io/crowdin-cli/faq for more details"
`;

exports[`translations not match downloads translations for the branch with --verbose 1`] = `
"●  Building translations
●  Building translations...
●  Downloading translations
●  Fetching project files
●  Fetching project info
●  Loading configuration from '<workspace>/translations-not-match/crowdin.yml' file
●  Project files fetched
●  Project info fetched
●  Translations built
◆  Done
◆  File 'translations/it/1_android.xml' extracted
◆  File 'translations/uk/1_android.xml' extracted
	- sources/2_android.xml (2)
		- translations/it/2_android.xml
		- translations/uk/2_android.xml
	- sources/3_android.xml (2)
		- translations/it/3_android.xml
		- translations/uk/3_android.xml
Visit the https://crowdin.github.io/crowdin-cli/faq for more details"
`;
